# cow-culator

./: .gitignore  README.md  main.py  pyproject.toml
src/cowculator/: __init__.py  bcs_dataset.py  bcs_frame_selector.py  cli.py  coco_keypoints.py  extract_frames.py  gait_dataset.py  gait_features.py  infer_bcs.py  infer_lameness.py  paths.py  pose_labels.py  pose_track.py  pseudo_label.py  train_bcs.py  train_dataset.py  train_lameness.py  xml_to_yolo.py
