[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cow-culator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.13.0.92",
    "ultralytics>=8.4.41",
]
[project.scripts]
cowculator = "cowculator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
